--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
 
             <div class="item">
-                <img src="./imagenes/Iphone 16.jpg" alt="">
+                <img src="./imagenes/iphone 16.jpg" alt="">
 
                 <div class="content">
                     <div class="title"></div>
