--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <img src="./imagenes/FC2025.jpeg" alt="">
             </div>
             <div class="item">
-                <img src="./imagenes/CODMW.webp" alt="">
+                <img src="./imagenes/CoDMW.webp" alt="">
             </div>
             <div class="item">
                 <img src="./imagenes/PC.jpg" alt="">
